implement tests for report

--- a/examples/testing_method.ipynb
+++ b/examples/testing_method.ipynb
@@ -198,10 +198,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-12-01 12:47:55,860 INFO [aspire.volume.volume] num_exp1/test1/vol2_cent.mrc with dtype float32 loaded as None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aspire.volume import Volume\n",
+    "\n",
+    "vol_cent = Volume.load(\"num_exp1/test1/vol2_cent.mrc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "rotations = np.load(\"num_exp1/test1/optimized_rotations.npz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KeysView(NpzFile 'num_exp1/test1/optimized_rotations.npz' with keys: opt_rot, refined_rot)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rotations.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aspire.utils.rotation import Rotation\n",
+    "\n",
+    "vol2_aligned = vol_cent.rotate(Rotation(rotations[\"refined_rot\"].astype(np.float32).T))\n",
+    "\n",
+    "vol2_aligned.save(\"vol2_aligned_refined.mrc\", overwrite=True)"
+   ]
   }
  ],
  "metadata": {
