add scripts for generating figures

--- a/report_results/report_figures.ipynb
+++ b/report_results/report_figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ds2865/.conda/envs/optimization_env/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2023-12-08 11:14:43,788\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import configargparse\n",
     "from aspire.volume import Volume\n",
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +76,7 @@
     "    raise SystemError(\"Could not create output directory\")\n",
     "\n",
     "# create experiment directory\n",
-    "logging.captureWarnings(True)\n",
+    "logging.captureWarnings(False)\n",
     "\n",
     "logger = logging.getLogger()\n",
     "fhandler = logging.FileHandler(\n",
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +155,32 @@
     "                results[\"refin_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(ref_rot).as_quat()\n",
     "                results[\"run_time_l2\"][i, j, k] = [opt_time - start_time, end_time - start_time]\n",
     "\n",
+    "\n",
+    "                # output results to log\n",
+    "                err_wemd_opt = np.linalg.norm(results[\"optim_quats_wemd\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "\n",
+    "                err_wemd_ref = np.linalg.norm(results[\"refin_quats_wemd\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "\n",
+    "                err_l2_opt = np.linalg.norm(results[\"optim_quats_l2\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "\n",
+    "                err_l2_ref = np.linalg.norm(results[\"refin_quats_l2\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "\n",
+    "                logging.info(f\"Results for volume {vol_fname}, parameters (downsample_res, max_iter) = {param}, iteration {k}:\")\n",
+    "                logging.info(f\"Error for wemd opt: {err_wemd_opt}\")\n",
+    "                logging.info(f\"Error for wemd ref: {err_wemd_ref}\")\n",
+    "                logging.info(f\"Error for l2 opt: {err_l2_opt}\")\n",
+    "                logging.info(f\"Error for l2 ref: {err_l2_ref}\")\n",
+    "                logging.info(f\"Time for wemd opt: {results['run_time_wemd'][i, j, k, 0]}\")\n",
+    "                logging.info(f\"Time for wemd ref: {results['run_time_wemd'][i, j, k, 1]}\")\n",
+    "                logging.info(f\"Time for l2 opt: {results['run_time_l2'][i, j, k, 0]}\")\n",
+    "                logging.info(f\"Time for l2 ref: {results['run_time_l2'][i, j, k, 1]}\")\n",
+    "\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,83 +257,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-12-07 17:11:07,180 INFO [aspire.volume.volume] volumes/emd_3683.map.gz with dtype float32 loaded as None\n",
-      "2023-12-07 17:11:09,567 INFO [root] Centering volume\n",
-      "2023-12-07 17:11:09,568 INFO [root] Center of mass: [-1.23497903 -1.15772928 -0.74079882]\n",
-      "2023-12-07 17:11:09,571 INFO [root] Volume centered\n",
-      "2023-12-07 17:11:09,577 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,587 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,625 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,652 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,680 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,692 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,721 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,753 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,786 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,820 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:09,855 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,783 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,804 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,835 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,866 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,898 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,935 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:12,968 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:13,003 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:13,034 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:13,066 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n",
-      "2023-12-07 17:11:13,102 WARNING [py.warnings] /Data/Packages/Utilities/miniconda3/envs/optimization_env/lib/python3.11/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 6 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n",
-      "\n"
+      "2023-12-08 11:14:48,086 INFO [aspire.volume.volume] volumes/emd_9515.map.gz with dtype float32 loaded as None\n",
+      "2023-12-08 11:14:48,093 INFO [root] Centering volume\n",
+      "2023-12-08 11:14:48,177 INFO [root] Center of mass: [ 39.8367519  -36.75667459  78.89296519]\n",
+      "2023-12-08 11:14:52,203 INFO [root] Volume centered\n",
+      "2023-12-08 11:16:11,476 INFO [root] Results for volume volumes/emd_9515.map.gz, parameters (downsample_res, max_iter) = [32, 150], iteration 0:\n",
+      "2023-12-08 11:16:11,478 INFO [root] Error for wemd opt: 0.435671570974375\n",
+      "2023-12-08 11:16:11,481 INFO [root] Error for wemd ref: 0.004104328035205957\n",
+      "2023-12-08 11:16:11,485 INFO [root] Error for l2 opt: 0.4427501529981646\n",
+      "2023-12-08 11:16:11,487 INFO [root] Error for l2 ref: 0.038128035295933276\n",
+      "2023-12-08 11:16:11,490 INFO [root] Time for wemd opt: 16.83385944366455\n",
+      "2023-12-08 11:16:11,491 INFO [root] Time for wemd ref: 25.824294328689575\n",
+      "2023-12-08 11:16:11,496 INFO [root] Time for l2 opt: 16.442373752593994\n",
+      "2023-12-08 11:16:11,497 INFO [root] Time for l2 ref: 37.52470326423645\n",
+      "2023-12-08 11:17:19,754 INFO [root] Results for volume volumes/emd_9515.map.gz, parameters (downsample_res, max_iter) = [32, 150], iteration 1:\n",
+      "2023-12-08 11:17:19,763 INFO [root] Error for wemd opt: 1.6596480675464698\n",
+      "2023-12-08 11:17:19,766 INFO [root] Error for wemd ref: 0.003740652298243729\n",
+      "2023-12-08 11:17:19,768 INFO [root] Error for l2 opt: 0.5340629539346063\n",
+      "2023-12-08 11:17:19,769 INFO [root] Error for l2 ref: 0.3935569049925343\n",
+      "2023-12-08 11:17:19,770 INFO [root] Time for wemd opt: 16.697100400924683\n",
+      "2023-12-08 11:17:19,771 INFO [root] Time for wemd ref: 27.42258310317993\n",
+      "2023-12-08 11:17:19,772 INFO [root] Time for l2 opt: 16.36889672279358\n",
+      "2023-12-08 11:17:19,773 INFO [root] Time for l2 ref: 35.67979884147644\n",
+      "2023-12-08 11:18:10,476 INFO [root] Results for volume volumes/emd_9515.map.gz, parameters (downsample_res, max_iter) = [32, 150], iteration 2:\n",
+      "2023-12-08 11:18:10,484 INFO [root] Error for wemd opt: 0.23967687120387637\n",
+      "2023-12-08 11:18:10,486 INFO [root] Error for wemd ref: 0.0007041696768731116\n",
+      "2023-12-08 11:18:10,488 INFO [root] Error for l2 opt: 1.9366112626397995\n",
+      "2023-12-08 11:18:10,489 INFO [root] Error for l2 ref: 0.0007092800547992495\n",
+      "2023-12-08 11:18:10,492 INFO [root] Time for wemd opt: 16.966205596923828\n",
+      "2023-12-08 11:18:10,493 INFO [root] Time for wemd ref: 22.36059594154358\n",
+      "2023-12-08 11:18:10,495 INFO [root] Time for l2 opt: 17.143341541290283\n",
+      "2023-12-08 11:18:10,496 INFO [root] Time for l2 ref: 23.18609309196472\n"
      ]
     }
    ],
@@ -311,23 +302,29 @@
     "%%capture cap\n",
     "\n",
     "vol_fnames = [\n",
-    "    \"volumes/emd_3683.map.gz\",\n",
-    "    \"volumes/emd_25892.map.gz\",\n",
+    "    #\"volumes/emd_3683.map.gz\",\n",
+    "    #\"volumes/emd_25892.map.gz\",\n",
     "    \"volumes/emd_9515.map.gz\",\n",
-    "    \"volumes/emd_23006.map.gz\",\n",
+    "    #\"volumes/emd_23006.map.gz\",\n",
     "]\n",
     "param_setups = [\n",
     "    [32, 150],\n",
-    "    [32, 200],\n",
-    "    [64, 150],\n",
-    "    [64, 200],\n",
+    "    #[32, 200],\n",
+    "    #[64, 150],\n",
+    "    #[64, 200],\n",
     "]\n",
-    "n_iter = 50\n",
+    "n_iter = 3\n",
     "\n",
-    "config.downsample_res = 8\n",
-    "config.max_iter = 10\n",
-    "\n",
-    "results = run_align_test(vol_fnames, n_iter, config)"
+    "results = run_align_test(vol_fnames, n_iter, config, param_setups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
@@ -347,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
