--- a/report_results/report_figures.ipynb
+++ b/report_results/report_figures.ipynb
@@ -79,9 +79,7 @@
     "logging.captureWarnings(False)\n",
     "\n",
     "logger = logging.getLogger()\n",
-    "fhandler = logging.FileHandler(\n",
-    "    filename=\"log.log\", mode=\"a\"\n",
-    ")\n",
+    "fhandler = logging.FileHandler(filename=\"log.log\", mode=\"a\")\n",
     "formatter = logging.Formatter(\"%(asctime)s - %(name)s - %(levelname)s - %(message)s\")\n",
     "fhandler.setFormatter(formatter)\n",
     "\n",
@@ -96,8 +94,7 @@
    "outputs": [],
    "source": [
     "def run_align_test(vol_fnames, n_iter, config, param_setups):\n",
-    "\n",
-    "    init_cand = np.eye(3).reshape(1, 3, 3) # start from identity matrix\n",
+    "    init_cand = np.eye(3).reshape(1, 3, 3)  # start from identity matrix\n",
     "\n",
     "    results = {\n",
     "        \"true_quats\": np.zeros((len(vol_fnames), len(param_setups), n_iter, 4)),\n",
@@ -110,36 +107,42 @@
     "    }\n",
     "\n",
     "    for i, vol_fname in enumerate(vol_fnames):\n",
-    "\n",
     "        vol_ref = Volume.load(vol_fname)\n",
     "        vol_ref = center_vol(vol_ref, config)\n",
-    "        \n",
+    "\n",
     "        for j, param in enumerate(param_setups):\n",
-    "            \n",
     "            config.downsample_res = param[0]\n",
     "            config.max_iter = param[1]\n",
     "            vol_ref_ds = vol_ref.downsample(config.downsample_res)\n",
     "\n",
     "            for k in range(n_iter):\n",
-    "                \n",
     "                # generate random rotation\n",
     "                true_rot = aspire_Rotation.generate_random_rotations(1)\n",
-    "                results[\"true_quats\"][i, j, k] = scipy_Rotation.from_matrix(true_rot._matrices[0]).as_quat()\n",
+    "                results[\"true_quats\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    true_rot._matrices[0]\n",
+    "                ).as_quat()\n",
     "                vol = vol_ref.rotate(true_rot).downsample(config.downsample_res)\n",
     "\n",
     "                # run for wemd\n",
     "                config.loss_type = \"wemd\"\n",
     "                config.corr_length = 0.75\n",
-    "                \n",
+    "\n",
     "                start_time = time.time()\n",
     "                opt_rot = run_gaussian_opt(vol, vol_ref_ds, init_cand, config)\n",
     "                opt_time = time.time()\n",
     "                ref_rot = run_nelder_mead_refinement(vol, vol_ref_ds, opt_rot, config)\n",
     "                end_time = time.time()\n",
     "\n",
-    "                results[\"run_time_wemd\"][i, j, k] = [opt_time - start_time, end_time - start_time]\n",
-    "                results[\"optim_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(opt_rot).as_quat()\n",
-    "                results[\"refin_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(ref_rot).as_quat()\n",
+    "                results[\"run_time_wemd\"][i, j, k] = [\n",
+    "                    opt_time - start_time,\n",
+    "                    end_time - start_time,\n",
+    "                ]\n",
+    "                results[\"optim_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    opt_rot\n",
+    "                ).as_quat()\n",
+    "                results[\"refin_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    ref_rot\n",
+    "                ).as_quat()\n",
     "\n",
     "                # run for l2\n",
     "                config.loss_type = \"l2\"\n",
@@ -151,27 +154,49 @@
     "                ref_rot = run_nelder_mead_refinement(vol, vol_ref_ds, opt_rot, config)\n",
     "                end_time = time.time()\n",
     "\n",
-    "                results[\"optim_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(opt_rot).as_quat()\n",
-    "                results[\"refin_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(ref_rot).as_quat()\n",
-    "                results[\"run_time_l2\"][i, j, k] = [opt_time - start_time, end_time - start_time]\n",
-    "\n",
+    "                results[\"optim_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    opt_rot\n",
+    "                ).as_quat()\n",
+    "                results[\"refin_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    ref_rot\n",
+    "                ).as_quat()\n",
+    "                results[\"run_time_l2\"][i, j, k] = [\n",
+    "                    opt_time - start_time,\n",
+    "                    end_time - start_time,\n",
+    "                ]\n",
     "\n",
     "                # output results to log\n",
-    "                err_wemd_opt = np.linalg.norm(results[\"optim_quats_wemd\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "                err_wemd_opt = np.linalg.norm(\n",
+    "                    results[\"optim_quats_wemd\"][i, j, k]\n",
+    "                    - results[\"true_quats\"][i, j, k]\n",
+    "                ) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
     "\n",
-    "                err_wemd_ref = np.linalg.norm(results[\"refin_quats_wemd\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "                err_wemd_ref = np.linalg.norm(\n",
+    "                    results[\"refin_quats_wemd\"][i, j, k]\n",
+    "                    - results[\"true_quats\"][i, j, k]\n",
+    "                ) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
     "\n",
-    "                err_l2_opt = np.linalg.norm(results[\"optim_quats_l2\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "                err_l2_opt = np.linalg.norm(\n",
+    "                    results[\"optim_quats_l2\"][i, j, k] - results[\"true_quats\"][i, j, k]\n",
+    "                ) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
     "\n",
-    "                err_l2_ref = np.linalg.norm(results[\"refin_quats_l2\"][i, j, k] - results[\"true_quats\"][i, j, k]) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
+    "                err_l2_ref = np.linalg.norm(\n",
+    "                    results[\"refin_quats_l2\"][i, j, k] - results[\"true_quats\"][i, j, k]\n",
+    "                ) / np.linalg.norm(results[\"true_quats\"][i, j, k])\n",
     "\n",
-    "                logging.info(f\"Results for volume {vol_fname}, parameters (downsample_res, max_iter) = {param}, iteration {k}:\")\n",
+    "                logging.info(\n",
+    "                    f\"Results for volume {vol_fname}, parameters (downsample_res, max_iter) = {param}, iteration {k}:\"\n",
+    "                )\n",
     "                logging.info(f\"Error for wemd opt: {err_wemd_opt}\")\n",
     "                logging.info(f\"Error for wemd ref: {err_wemd_ref}\")\n",
     "                logging.info(f\"Error for l2 opt: {err_l2_opt}\")\n",
     "                logging.info(f\"Error for l2 ref: {err_l2_ref}\")\n",
-    "                logging.info(f\"Time for wemd opt: {results['run_time_wemd'][i, j, k, 0]}\")\n",
-    "                logging.info(f\"Time for wemd ref: {results['run_time_wemd'][i, j, k, 1]}\")\n",
+    "                logging.info(\n",
+    "                    f\"Time for wemd opt: {results['run_time_wemd'][i, j, k, 0]}\"\n",
+    "                )\n",
+    "                logging.info(\n",
+    "                    f\"Time for wemd ref: {results['run_time_wemd'][i, j, k, 1]}\"\n",
+    "                )\n",
     "                logging.info(f\"Time for l2 opt: {results['run_time_l2'][i, j, k, 0]}\")\n",
     "                logging.info(f\"Time for l2 ref: {results['run_time_l2'][i, j, k, 1]}\")\n",
     "\n",
@@ -185,40 +210,57 @@
    "outputs": [],
    "source": [
     "def run_noise_test(vol_fname, n_iter, config, signal_noise_ratios, param_setups):\n",
-    "\n",
-    "    init_cand = np.eye(3).reshape(1, 3, 3) # start from identity matrix\n",
+    "    init_cand = np.eye(3).reshape(1, 3, 3)  # start from identity matrix\n",
     "\n",
     "    results = {\n",
-    "        \"true_quats\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 4)),\n",
-    "        \"optim_quats_wemd\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 4)),\n",
-    "        \"refin_quats_wemd\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 4)),\n",
-    "        \"optim_quats_l2\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 4)),\n",
-    "        \"refin_quats_l2\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 4)),\n",
-    "        \"run_time_wemd\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 2)),\n",
-    "        \"run_time_l2\": np.zeros((len(signal_noise_ratios), len(param_setups), n_iter, 2)),\n",
+    "        \"true_quats\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 4)\n",
+    "        ),\n",
+    "        \"optim_quats_wemd\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 4)\n",
+    "        ),\n",
+    "        \"refin_quats_wemd\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 4)\n",
+    "        ),\n",
+    "        \"optim_quats_l2\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 4)\n",
+    "        ),\n",
+    "        \"refin_quats_l2\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 4)\n",
+    "        ),\n",
+    "        \"run_time_wemd\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 2)\n",
+    "        ),\n",
+    "        \"run_time_l2\": np.zeros(\n",
+    "            (len(signal_noise_ratios), len(param_setups), n_iter, 2)\n",
+    "        ),\n",
     "    }\n",
     "\n",
     "    vol_ref = Volume.load(vol_fname)\n",
     "    vol_ref = center_vol(vol_ref, config)\n",
-    "    \n",
+    "\n",
     "    for i, snr in enumerate(signal_noise_ratios):\n",
-    "        noise_std = np.sqrt(np.linalg.norm(vol_ref._data[0])**2 / (vol_ref._data.shape[1] ** 3 * snr))\n",
+    "        noise_std = np.sqrt(\n",
+    "            np.linalg.norm(vol_ref._data[0]) ** 2 / (vol_ref._data.shape[1] ** 3 * snr)\n",
+    "        )\n",
     "\n",
     "        for j, param in enumerate(param_setups):\n",
-    "            \n",
     "            config.downsample_res = param[0]\n",
     "            config.max_iter = param[1]\n",
     "\n",
     "            for k in range(n_iter):\n",
-    "                \n",
     "                # generate random rotation\n",
     "                true_rot = aspire_Rotation.generate_random_rotations(1)\n",
-    "                results[\"true_quats\"][i, j, k] = scipy_Rotation.from_matrix(true_rot._matrices[0]).as_quat()\n",
+    "                results[\"true_quats\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    true_rot._matrices[0]\n",
+    "                ).as_quat()\n",
     "                vol = vol_ref.rotate(true_rot)\n",
     "\n",
     "                # add noise\n",
     "                vol = vol + np.random.normal(0, noise_std, vol._data[0].shape)\n",
-    "                vol_ref_noisy = vol_ref + np.random.normal(0, noise_std, vol_ref._data[0].shape)\n",
+    "                vol_ref_noisy = vol_ref + np.random.normal(\n",
+    "                    0, noise_std, vol_ref._data[0].shape\n",
+    "                )\n",
     "\n",
     "                # downsample\n",
     "                vol = vol.downsample(config.downsample_res)\n",
@@ -227,16 +269,25 @@
     "                # run for wemd\n",
     "                config.loss_type = \"wemd\"\n",
     "                config.corr_length = 0.75\n",
-    "                \n",
+    "\n",
     "                start_time = time.time()\n",
     "                opt_rot = run_gaussian_opt(vol, vol_ref_noisy, init_cand, config)\n",
     "                opt_time = time.time()\n",
-    "                ref_rot = run_nelder_mead_refinement(vol, vol_ref_noisy, opt_rot, config)\n",
+    "                ref_rot = run_nelder_mead_refinement(\n",
+    "                    vol, vol_ref_noisy, opt_rot, config\n",
+    "                )\n",
     "                end_time = time.time()\n",
     "\n",
-    "                results[\"run_time_wemd\"][i, j, k] = [opt_time - start_time, end_time - start_time]\n",
-    "                results[\"optim_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(opt_rot).as_quat()\n",
-    "                results[\"refin_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(ref_rot).as_quat()\n",
+    "                results[\"run_time_wemd\"][i, j, k] = [\n",
+    "                    opt_time - start_time,\n",
+    "                    end_time - start_time,\n",
+    "                ]\n",
+    "                results[\"optim_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    opt_rot\n",
+    "                ).as_quat()\n",
+    "                results[\"refin_quats_wemd\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    ref_rot\n",
+    "                ).as_quat()\n",
     "\n",
     "                # run for l2\n",
     "                config.loss_type = \"l2\"\n",
@@ -245,12 +296,21 @@
     "                start_time = time.time()\n",
     "                opt_rot = run_gaussian_opt(vol, vol_ref_noisy, init_cand, config)\n",
     "                opt_time = time.time()\n",
-    "                ref_rot = run_nelder_mead_refinement(vol, vol_ref_noisy, opt_rot, config)\n",
+    "                ref_rot = run_nelder_mead_refinement(\n",
+    "                    vol, vol_ref_noisy, opt_rot, config\n",
+    "                )\n",
     "                end_time = time.time()\n",
     "\n",
-    "                results[\"optim_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(opt_rot).as_quat()\n",
-    "                results[\"refin_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(ref_rot).as_quat()\n",
-    "                results[\"run_time_l2\"][i, j, k] = [opt_time - start_time, end_time - start_time]\n",
+    "                results[\"optim_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    opt_rot\n",
+    "                ).as_quat()\n",
+    "                results[\"refin_quats_l2\"][i, j, k] = scipy_Rotation.from_matrix(\n",
+    "                    ref_rot\n",
+    "                ).as_quat()\n",
+    "                results[\"run_time_l2\"][i, j, k] = [\n",
+    "                    opt_time - start_time,\n",
+    "                    end_time - start_time,\n",
+    "                ]\n",
     "\n",
     "    return results"
    ]
@@ -302,16 +362,16 @@
     "%%capture cap\n",
     "\n",
     "vol_fnames = [\n",
-    "    #\"volumes/emd_3683.map.gz\",\n",
-    "    #\"volumes/emd_25892.map.gz\",\n",
+    "    # \"volumes/emd_3683.map.gz\",\n",
+    "    # \"volumes/emd_25892.map.gz\",\n",
     "    \"volumes/emd_9515.map.gz\",\n",
-    "    #\"volumes/emd_23006.map.gz\",\n",
+    "    # \"volumes/emd_23006.map.gz\",\n",
     "]\n",
     "param_setups = [\n",
     "    [32, 150],\n",
-    "    #[32, 200],\n",
-    "    #[64, 150],\n",
-    "    #[64, 200],\n",
+    "    # [32, 200],\n",
+    "    # [64, 150],\n",
+    "    # [64, 200],\n",
     "]\n",
     "n_iter = 3\n",
     "\n",
@@ -323,9 +383,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -344,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
