--- a/report_results/report_figures.ipynb
+++ b/report_results/report_figures.ipynb
@@ -113,6 +113,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results for Bayesian Optimization vs Bayesian Optimization + refinement"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -193,23 +200,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 2, 25, 2)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "results_noise[\"run_time_wemd\"].shape"
+    "### Results for added noise (refinement only)"
    ]
   },
   {
@@ -265,7 +259,7 @@
     }
    ],
    "source": [
-    "list(results_noise.keys()), results"
+    "list(results_noise.keys())"
    ]
   },
   {
@@ -319,12 +313,6 @@
     "# set spacing between vertical plots\n",
     "plt.subplots_adjust(hspace=0.8)\n",
     "\n",
-    "#ax[0, 0].set_ylim([0, 0.5])\n",
-    "#ax[0, 1].set_ylim([0, 0.5])\n",
-    "#ax[1, 0].set_ylim([0, 0.5])\n",
-    "#ax[1, 1].set_ylim([0, 0.5])\n",
-    "\n",
-    "\n",
     "fig.savefig(\"results_for_noise.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
@@ -332,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting projections for different levels of noise"
+    "### Plotting projections for different levels of noise"
    ]
   },
   {
@@ -436,9 +424,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optimization_kernel",
+   "display_name": "optimization_env",
    "language": "python",
-   "name": "optimization_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -450,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
